JavaScript Implementation/grammar/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, BREAK=2, BYTE=3, CASE=4, CATCH=5, CHAR=6, CONST=7, CONTINUE=8, 
		DEFAULT=9, DO=10, DOUBLE=11, ELSE=12, FINAL=13, FINALLY=14, FLOAT=15, 
		FOR=16, IF=17, GOTO=18, INT=19, LONG=20, NATIVE=21, RETURN=22, SHORT=23, 
		STATIC=24, STRICTFP=25, SWITCH=26, SYNCHRONIZED=27, THROW=28, THROWS=29, 
		TRANSIENT=30, TRY=31, VOID=32, VOLATILE=33, WHILE=34, PRINT=35, SCAN=36, 
		DECIMAL_LITERAL=37, HEX_LITERAL=38, OCT_LITERAL=39, BINARY_LITERAL=40, 
		FLOAT_LITERAL=41, HEX_FLOAT_LITERAL=42, BOOL_LITERAL=43, CHAR_LITERAL=44, 
		STRING_LITERAL=45, NULL_LITERAL=46, LPAREN=47, RPAREN=48, LBRACE=49, RBRACE=50, 
		LBRACK=51, RBRACK=52, SEMI=53, COMMA=54, DOT=55, ASSIGN=56, GT=57, LT=58, 
		BANG=59, TILDE=60, QUESTION=61, COLON=62, EQUAL=63, LE=64, GE=65, NOTEQUAL=66, 
		AND=67, OR=68, INC=69, DEC=70, ADD=71, SUB=72, MUL=73, DIV=74, BITAND=75, 
		BITOR=76, CARET=77, MOD=78, ADD_ASSIGN=79, SUB_ASSIGN=80, MUL_ASSIGN=81, 
		DIV_ASSIGN=82, AND_ASSIGN=83, OR_ASSIGN=84, XOR_ASSIGN=85, MOD_ASSIGN=86, 
		LSHIFT_ASSIGN=87, RSHIFT_ASSIGN=88, URSHIFT_ASSIGN=89, ARROW=90, COLONCOLON=91, 
		AT=92, ELLIPSIS=93, WS=94, COMMENT=95, LINE_COMMENT=96, IDENTIFIER=97, 
		ERROR_STRING_LITERAL=98;
	public static final int
		RULE_compilationUnit = 0, RULE_variableModifier = 1, RULE_typeParameters = 2, 
		RULE_typeParameter = 3, RULE_typeBound = 4, RULE_methodDeclaration = 5, 
		RULE_methodBody = 6, RULE_typeTypeOrVoid = 7, RULE_constDeclaration = 8, 
		RULE_constantDeclarator = 9, RULE_interfaceMethodDeclaration = 10, RULE_interfaceMethodModifier = 11, 
		RULE_genericInterfaceMethodDeclaration = 12, RULE_variableDeclarators = 13, 
		RULE_variableDeclarator = 14, RULE_variableDeclaratorId = 15, RULE_variableInitializer = 16, 
		RULE_arrayInitializer = 17, RULE_classOrInterfaceType = 18, RULE_typeArgument = 19, 
		RULE_qualifiedNameList = 20, RULE_formalParameters = 21, RULE_formalParameterList = 22, 
		RULE_formalParameter = 23, RULE_lastFormalParameter = 24, RULE_qualifiedName = 25, 
		RULE_literal = 26, RULE_integerLiteral = 27, RULE_floatLiteral = 28, RULE_annotation = 29, 
		RULE_elementValuePairs = 30, RULE_elementValuePair = 31, RULE_elementValue = 32, 
		RULE_elementValueArrayInitializer = 33, RULE_defaultValue = 34, RULE_block = 35, 
		RULE_wrongBlockStatement = 36, RULE_blockStatement = 37, RULE_wrongLocalVariableDeclaration = 38, 
		RULE_localVariableDeclaration = 39, RULE_statement = 40, RULE_scanMissingIdentifierError = 41, 
		RULE_compareExpression = 42, RULE_printMissingQuotesError = 43, RULE_wrongPrintStatement = 44, 
		RULE_returnPrimitiveTypeError = 45, RULE_returnMissingError = 46, RULE_forError = 47, 
		RULE_catchClause = 48, RULE_catchType = 49, RULE_finallyBlock = 50, RULE_resourceSpecification = 51, 
		RULE_resources = 52, RULE_resource = 53, RULE_switchBlockStatementGroup = 54, 
		RULE_switchLabel = 55, RULE_forControl = 56, RULE_forInit = 57, RULE_enhancedForControl = 58, 
		RULE_parExpression = 59, RULE_excessLParenExpression = 60, RULE_excessRParenExpression = 61, 
		RULE_expressionList = 62, RULE_methodCall = 63, RULE_expression = 64, 
		RULE_primaryError = 65, RULE_expressionError = 66, RULE_expressionAdditionError = 67, 
		RULE_expressionSubtractionError = 68, RULE_primary = 69, RULE_arrayCreatorRest = 70, 
		RULE_typeList = 71, RULE_typeType = 72, RULE_primitiveType = 73, RULE_typeArguments = 74, 
		RULE_arguments = 75;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "variableModifier", "typeParameters", "typeParameter", 
			"typeBound", "methodDeclaration", "methodBody", "typeTypeOrVoid", "constDeclaration", 
			"constantDeclarator", "interfaceMethodDeclaration", "interfaceMethodModifier", 
			"genericInterfaceMethodDeclaration", "variableDeclarators", "variableDeclarator", 
			"variableDeclaratorId", "variableInitializer", "arrayInitializer", "classOrInterfaceType", 
			"typeArgument", "qualifiedNameList", "formalParameters", "formalParameterList", 
			"formalParameter", "lastFormalParameter", "qualifiedName", "literal", 
			"integerLiteral", "floatLiteral", "annotation", "elementValuePairs", 
			"elementValuePair", "elementValue", "elementValueArrayInitializer", "defaultValue", 
			"block", "wrongBlockStatement", "blockStatement", "wrongLocalVariableDeclaration", 
			"localVariableDeclaration", "statement", "scanMissingIdentifierError", 
			"compareExpression", "printMissingQuotesError", "wrongPrintStatement", 
			"returnPrimitiveTypeError", "returnMissingError", "forError", "catchClause", 
			"catchType", "finallyBlock", "resourceSpecification", "resources", "resource", 
			"switchBlockStatementGroup", "switchLabel", "forControl", "forInit", 
			"enhancedForControl", "parExpression", "excessLParenExpression", "excessRParenExpression", 
			"expressionList", "methodCall", "expression", "primaryError", "expressionError", 
			"expressionAdditionError", "expressionSubtractionError", "primary", "arrayCreatorRest", 
			"typeList", "typeType", "primitiveType", "typeArguments", "arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bulalo'", "'kitkat'", "'bite'", "'caserola'", "'ketchup'", "'chicharon'", 
			"'tubig'", "'coconut'", "'plain'", "'donut'", "'adobo'", "'eel'", "'garnish'", 
			"'serve'", "'mango'", "'pork'", "'beef'", "'goto'", "'pint'", "'longganisa'", 
			"'kangkong'", "'rice'", "'shortcake'", "'stove'", "'baking'", "'sugar'", 
			"'stir'", "'turon'", "'turons'", "'truffle'", "'fry'", "'boil'", "'bolabola'", 
			"'wine'", "'plate'", "'shop'", null, null, null, null, null, null, null, 
			null, null, "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
			"','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", 
			"'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", 
			"'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", "'->'", "'::'", 
			"'@'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH", "CHAR", "CONST", "CONTINUE", 
			"DEFAULT", "DO", "DOUBLE", "ELSE", "FINAL", "FINALLY", "FLOAT", "FOR", 
			"IF", "GOTO", "INT", "LONG", "NATIVE", "RETURN", "SHORT", "STATIC", "STRICTFP", 
			"SWITCH", "SYNCHRONIZED", "THROW", "THROWS", "TRANSIENT", "TRY", "VOID", 
			"VOLATILE", "WHILE", "PRINT", "SCAN", "DECIMAL_LITERAL", "HEX_LITERAL", 
			"OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
			"BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
			"ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", 
			"LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", 
			"DIV", "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
			"MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", 
			"COLONCOLON", "AT", "ELLIPSIS", "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER", 
			"ERROR_STRING_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << BYTE) | (1L << CHAR) | (1L << DOUBLE) | (1L << FLOAT) | (1L << INT) | (1L << LONG) | (1L << SHORT) | (1L << VOID))) != 0)) {
				{
				{
				setState(152);
				methodDeclaration();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableModifierContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(GrammarParser.FINAL, 0); }
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public VariableModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVariableModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVariableModifier(this);
		}
	}

	public final VariableModifierContext variableModifier() throws RecognitionException {
		VariableModifierContext _localctx = new VariableModifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variableModifier);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FINAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(FINAL);
				}
				break;
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				annotation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeParametersContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(GrammarParser.LT, 0); }
		public List<TypeParameterContext> typeParameter() {
			return getRuleContexts(TypeParameterContext.class);
		}
		public TypeParameterContext typeParameter(int i) {
			return getRuleContext(TypeParameterContext.class,i);
		}
		public TerminalNode GT() { return getToken(GrammarParser.GT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public TypeParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTypeParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTypeParameters(this);
		}
	}

	public final TypeParametersContext typeParameters() throws RecognitionException {
		TypeParametersContext _localctx = new TypeParametersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(LT);
			setState(165);
			typeParameter();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(166);
				match(COMMA);
				setState(167);
				typeParameter();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeParameterContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GrammarParser.IDENTIFIER, 0); }
		public TypeBoundContext typeBound() {
			return getRuleContext(TypeBoundContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TypeParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTypeParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTypeParameter(this);
		}
	}

	public final TypeParameterContext typeParameter() throws RecognitionException {
		TypeParameterContext _localctx = new TypeParameterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(175);
				annotation();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			match(IDENTIFIER);
			setState(182);
			typeBound();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeBoundContext extends ParserRuleContext {
		public List<TypeTypeContext> typeType() {
			return getRuleContexts(TypeTypeContext.class);
		}
		public TypeTypeContext typeType(int i) {
			return getRuleContext(TypeTypeContext.class,i);
		}
		public List<TerminalNode> BITAND() { return getTokens(GrammarParser.BITAND); }
		public TerminalNode BITAND(int i) {
			return getToken(GrammarParser.BITAND, i);
		}
		public TypeBoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeBound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTypeBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTypeBound(this);
		}
	}
